--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
 edition = "2018"
 
 [dependencies]
-libc = ">=0.2.39"
-vmm-sys-util = ">=0.6.1"
+libc = "0.2.66"
+vmm-sys-util = "0.11.0"
